# actix-web-api

./: .env  Cargo.toml  Makefile  README.md  postgres.md
migrations/: 20240201001737_init.up.sql
src/: handler.rs  main.rs
