[package]
name = "actix-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
async-trait = "0.1.77"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
surrealdb = "1.1.1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
