[package]
name = "actix-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
